# handGestureMouse

./: Doubleclick.py  OPENCV_DEMO.ipynb  README.md  Swiping  hand_gesture.py  mediapipeTutorial.py  requirements.txt  scrolling.py  vol.py
bukeh/: Makefile  dockerCompose.yml  pyproject.toml
bukeh/myapp/: Cronfile  main.py  radarPlot.py
bukeh/workflows/: actions.yml  develop.yml
mediapipe/: face_mesh.py  face_recognition.py
mediapipe/custom/: core.py  face_geometry.py  irislm.py
openCV/: README.txt  openCV1.py  openCV2.py  openCV3.py
